Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-10-07 (SVN):
    * q_endian.h: Updates to endianism detection macro checks.

2011-09-24 (SVN):
    * Sys_mkdir: Reverted the strerror() output from DOS versions. Not
      really necessary for that platform, so they stay in for the unix
      versions for now.

2011-09-24 (SVN):
    * userdir.h: Define user directory name macros based on the target
      platform.

2011-09-24 (SVN):
    * Print strerror(errno) in case of failure in Sys_mkdir(). In
      Sys_GetUserdir(), call Sys_mkdir() with the crash flag set.

2011-09-22 (SVN):
    * gl_rsurf.c (R_DrawBrushModel): Add missing gl_zfix.value check to
      the commented out code (for completeness and for future reference.)

2011-09-22 (SVN):
    * midi_mac.c: Removed unused variable bMidiInited. Renamed bPaused
      to midi_paused.

2011-09-22 (SVN):
    * draw.c, gl_draw.c (Draw_ConsoleBackground): Some more tidy-up for
      version information printing.

2011-09-22 (SVN):
    * Xcode project file for Mac OS X: Updated from Steven. Deleted the
      unnecessary user files.

2011-09-22 (SVN):
    * screen.c, gl_screen.c, quakefs.h: Removed the unistd.h, io.h and
      io_msvc.h includes. They aren't necessary since the removal of
      the relevant CRT functions' direct usage since v1.5.0.

2011-09-22 (SVN):
    * glquake.h: Removed extern declaration for d_15to8table[] which is
      non-existant since v1.5.0.

2011-09-22 (SVN):
    * common.h: Fixed a typo in a comment.

2011-09-22 (SVN):
    * quakedef.h: Bumped version to 1.5.1 in the development tree.
    * docs: Changed version to read 1.5.1.

2011-09-17 (1.5.0-final / SVN):
    * in_dos.c (IN_Init): Make sure the command line switch actually has
      an argument. From Sander van Dijk.
    * in_svgalib.c (IN_InitMouse): Likewise.

2011-09-15 (SVN):
    * Bumped version date to 2011-09-15. Removed the beta status and
      marked as final.

2011-09-15 (SVN):